// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-static-file-ancestors should get ancestors for a nested file or folder 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "hasChildren": true,
        "isFolder": true,
        "name": "",
        "parent": null,
        "path": "/",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "App_Plugins",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/",
        },
        "path": "/App_Plugins",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "UmbracoEmbeddedResource",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/App_Plugins",
        },
        "path": "/App_Plugins/UmbracoEmbeddedResource",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "BackOffice",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/App_Plugins/UmbracoEmbeddedResource",
        },
        "path": "/App_Plugins/UmbracoEmbeddedResource/BackOffice",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "Default",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/App_Plugins/UmbracoEmbeddedResource/BackOffice",
        },
        "path": "/App_Plugins/UmbracoEmbeddedResource/BackOffice/Default",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "css",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/App_Plugins/UmbracoEmbeddedResource/BackOffice/Default",
        },
        "path": "/App_Plugins/UmbracoEmbeddedResource/BackOffice/Default/css",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "application.css",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/App_Plugins/UmbracoEmbeddedResource/BackOffice/Default/css",
        },
        "path": "/App_Plugins/UmbracoEmbeddedResource/BackOffice/Default/css/application.css",
      },
    ],
  },
}
`;

exports[`get-static-file-ancestors should handle empty or root descendant path 1`] = `
{
  "content": [
    {
      "text": "[{"name":"","path":"/","parent":null,"isFolder":true,"hasChildren":true},{"name":"","path":"/","parent":null,"isFolder":true,"hasChildren":true}]",
      "type": "text",
    },
  ],
}
`;

exports[`get-static-file-ancestors should handle invalid descendant path gracefully 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "hasChildren": true,
        "isFolder": true,
        "name": "",
        "parent": null,
        "path": "/",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "nonexistent",
        "parent": {
          "path": "/",
        },
        "path": "/nonexistent",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "invalid",
        "parent": {
          "path": "/nonexistent",
        },
        "path": "/nonexistent/invalid",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "path",
        "parent": {
          "path": "/nonexistent/invalid",
        },
        "path": "/nonexistent/invalid/path",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "file.txt",
        "parent": {
          "path": "/nonexistent/invalid/path",
        },
        "path": "/nonexistent/invalid/path/file.txt",
      },
    ],
  },
}
`;

exports[`get-static-file-ancestors should handle root-level item path gracefully 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "hasChildren": true,
        "isFolder": true,
        "name": "",
        "parent": null,
        "path": "/",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "App_Plugins",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/",
        },
        "path": "/App_Plugins",
      },
    ],
  },
}
`;
